2008-11-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (finish_prepare_screenshot):
	Don't try to include the window border when doing fullscreen
	captures (#559532).

2008-11-04  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am: update to the new configure pkg-config checks
	(part of #557262).

2008-10-21  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am:
	* gnome-screenshot.c: (display_help), (create_screenshot_frame),
	(load_options), (main):
	Drop libgnomeui dependency (#557169).

2008-10-20  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-screenshot.c:
	(load_options), (save_options): Remove the code that loads/saves
	the take_window_shot GConf key.
	
	(main): Mark the -B switch description as translatable.

	* gnome-screenshot.schemas.in: Deprecate the take_window_shot key.

2008-10-20  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 553085 – After doing gnome-screenshot -w (grab a window), "grab the entire
	screen" works to grab a window.

	* gnome-screenshot.c:
	(load_options), (save_options): Ignore the take_window_shot GConf key
	when loading and saving the options.
	
	(main): Include a -B|--remove-border command line switch to disable the
	window border.

2008-09-14  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 552175 – invalid schemas file

	* gnome-screenshot.schemas.in: Provide default values for
	the take_window_show and delay keys. (Christian Persch)

2008-09-08  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 99897 – Screen Shot to clip board

	* gnome-screenshot.c:
	(screenshot_dialog_response_cb): Allow copying the screenshot
	image to the clipboard. Based on a patch by Vincent Untz.

	* gnome-screenshot.ui: Add the 'Copy to Clipboard' button.

	* screenshot-dialog.[ch]: Allow retrieving the GdkPixbuf
	of the screenshot from the dialog.

2008-08-28  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (finish_prepare_screenshot),
	(check_file_done), (try_check_file), (find_current_window),
	(prepare_screenshot):