@@ -1,6 +1,11 @@
 2008-11-08  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* gnome-screenshot.c: (finish_prepare_screenshot):
+	Simplify the code a bit. Thanks to Paolo Borelli.
+
+2008-11-08  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* gnome-screenshot.c: (finish_prepare_screenshot):
 	Don't try to include the window border when doing fullscreen
 	captures (#559532).
 
